// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Should return the List component with onClick param 1`] = `
<button
  data-testid="button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "#FFFFFF",
      "borderLeft": "1rem solid #8a8a8a",
      "borderRadius": "0.5rem",
      "boxShadow": "0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.25)",
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "margin": "8px auto",
      "padding": 16,
      "width": "100%",
    }
  }
  type="button"
>
  <h2
    style={
      Object {
        "fontSize": "1.5rem",
        "fontWeight": "bold",
        "margin": 0,
        "textTransform": "capitalize",
      }
    }
  >
    My title
  </h2>
  <p
    style={
      Object {
        "fontSize": "1.25rem",
        "margin": "8px 0px 0px",
        "textAlign": "left",
        "textTransform": "capitalize",
      }
    }
  >
    My content
  </p>
</button>
`;

exports[`List Should return the List component without onClick param 1`] = `
<div
  style={
    Object {
      "background": "#FFFFFF",
      "borderLeft": "1rem solid #8a8a8a",
      "borderRadius": "0.5rem",
      "boxShadow": "0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.25)",
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "margin": "8px auto",
      "padding": 16,
      "width": "100%",
    }
  }
>
  <h2
    style={
      Object {
        "fontSize": "1.5rem",
        "fontWeight": "bold",
        "margin": 0,
        "textTransform": "capitalize",
      }
    }
  >
    My title
  </h2>
  <p
    style={
      Object {
        "fontSize": "1.25rem",
        "margin": "8px 0px 0px",
        "textAlign": "left",
        "textTransform": "capitalize",
      }
    }
  >
    My content
  </p>
</div>
`;
